@@ -1,4 +1,7 @@
 Release 1.3-SNAPSHOT
+* Compilation requires JDK 1.6 now due to support for new datatypes. It
+  should run OK in JDK 1.5 provided you don't reference one of those
+  datatypes.
 * The \call statement is now capable of displaying Oracle result sets
   produced from Oracle refcursors. This is done with the special ":r"
   argument placeholder.  See "\help call" for details.
@@ -15,6 +18,9 @@ Release 1.3-SNAPSHOT
 * Added dist-sparc-sol build target. This provides a .tar.gz file
   that contains jsqsh and its JNI files. Currently this relies upon
   the build platform having readline-5.x installed
+* Added support for SQLXML datatype (right now it is just dumped as 
+  straight text and not really formatted in a nice way--maybe later).
+* Enabled support for "N" types, NVARCHAR(), NCHAR(), etc. 
 * Fixed case where stored procedures with multiple result sets would
   occasionally not show all of the available result sets. Unfortunately,
   this problem still persists in the SQL Server 2005 driver, but I think
